# alg_prog_project

./: Dockerfile  README.md  app.py  database.py  docker-compose.yml  init-letsencrypt.sh  migrations.py  nginx.conf  oauth_providers.py  requirements.txt
instance/: surveys.db
static/: script.js  style.css
templates/: base.html  create_survey.html  edit_survey.html  index.html  login.html  register.html  survey_results.html  take_survey.html
testing-platform/: README.md  docker-compose.yml
testing-platform/auth/: CMakeLists.txt  Dockerfile  README.md
testing-platform/auth/include/: auth_service.hpp  authorization_server.hpp  code_authentication.hpp  database.hpp  jwt_manager.hpp  models.hpp  oauth_provider.hpp  session_manager.hpp
testing-platform/auth/src/: auth_service.cpp  database.cpp  main.cpp  oauth_provider.cpp  session_manager.cpp
testing-platform/core/: Dockerfile  go.mod  main.go
testing-platform/core/cmd/api/: main.go
testing-platform/core/include/: core_service.hpp  models.hpp  task_manager.hpp  test_runner.hpp
testing-platform/core/internal/api/: server.go
testing-platform/core/internal/config/: config.go
testing-platform/core/internal/errors/: errors.go
testing-platform/core/internal/model/: model.go  models.go
testing-platform/core/internal/models/: models.go
testing-platform/core/internal/repository/: interface.go  postgres.go  test_repository.go
testing-platform/core/internal/service/: core_service.go  result_analyzer.go  service.go  task_manager.go  test_runner.go  test_service.go
testing-platform/telegram-client/: requirements.txt
testing-platform/web-client/: package.json
tg_bot_go/: go.mod  main.go
